# rust_2d_game

./: Cargo.toml
src/: bullet.rs  common.rs  game_state.rs  main.rs  player.rs
