[package]
name = "game_2d"
version = "0.1.0"
authors = ["mfrench <mfrench@indeed.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { git = "https://github.com/ggez/ggez" }
ncollide2d = "0.21.0"
nphysics2d = "0.13.0"
nalgebra = "0.19.0"
mint = "0.5.3"

[profile.dev]
opt-level = 1